--- a/app/src/main/res/drawable/background_card_border_white.xml
+++ b/app/src/main/res/drawable/background_card_border_white.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/white_f2feff" />
+    <solid android:color="@color/white_fafafa" />
     <corners
         android:bottomLeftRadius="@dimen/dimen_4dp"
         android:bottomRightRadius="@dimen/dimen_4dp"
