--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -37,7 +37,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        app:backgroundColor="@color/color_accent"
+        app:backgroundColor="@color/colorAccent"
         app:deleteIconColor="@android:color/white"
         app:hasAvatarIcon="true"
         app:label="Java Script"
