--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="color_primary">#008577</color>
-    <color name="color_primary_dark">#00574B</color>
-    <color name="color_accent">#D81B60</color>
-
     <color name="colorPrimary">#D81B60</color>
-    <color name="colorPrimaryDark">#D81B60</color>
-    <color name="colorAccent">#6C63FF</color>
+    <color name="colorPrimaryDark">#4C62FE</color>
+    <color name="colorAccent">#4CA0FF</color>
     <color name="colorPrimaryText">#1C1C1C</color>
     <color name="green_175258">#175258</color>
     <color name="green_2bbc9b">#2BBC9B</color>
     <color name="green_adfff1">#ADFFF1</color>
+    <color name="white_ffffff">#FFFFFF</color>
+    <color name="white_fafafa">#fafafa</color>
+    <color name="white_E6EEF8">#E6EEF8</color>
     <color name="white_f2feff">#F2FEFF</color>
+    <color name="white_b3f2feff">#B3F2FEFF</color>
     <color name="green_e6f9fa">#E6F9FA</color>
     <color name="black">#000000</color>
     <color name="gray_ababab">#ababab</color>
+    <color name="gray_757575">#757575</color>
 </resources>
