--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="dimen_36dp">36dp</dimen>
     <dimen name="dimen_38dp">38dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="app_bar_height_home">170dp</dimen>
     <dimen name="dimen_8dp">8dp</dimen>
     <dimen name="dimen_18sp">18sp</dimen>
     <dimen name="dimen_14sp">14sp</dimen>
